A fix for IE browser scrollbar.
IE browser scrollbar was covering toolbar handle, so it had to be moved
to the left in order for the menu to be opened.

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,11 @@ div#myToolbar .toolbar-handle {
 	width: 30px;
 }
 
+div#myToolbar.toolbarHidden .toolbar-handle span {
+	position: relative;
+	left: -15px;
+}
+
 div.toolbarShown {
 	width: 350px;
 }
